# otawa-clp

./: .gitignore  CMakeLists.txt  Doxyfile  Doxyfile.in  OwnershipPtr.h  README-DEV.md  README.md  clp.cpp  clp.eld  clp_Analysis.cpp  clp_Domain.cpp  clp_State.cpp  clp_SymbExpr.cpp  clp_Value.cpp  sem_BackwardPredicateBuilder.cpp  sem_ForwardPredicateBuilder.cpp  sem_predicates.cpp
otawa/clp/: Domain.h  State.h  SymbExpr.h  Value.h  features.h
otawa/pred/: expression.h  predicates.h
test/: CMakeLists.txt  bsum.elf  bsum.s  msum.elf  msum.s  sum.c  sum.elf  test_value.cpp  usum.elf  usum.s
